# sd-boot

./: .gitignore  Readme.rst  do-install
src/: .clang-tidy  CMakeLists.txt  do-install-bash  do-install-binary  do-install-common  do-test-build  meson.build
src/bash-code/etc/kernel/install.d/: 95-sd-boot-loaderentry-efi.install  95-sd-boot-loaderentry-kernel.install
src/bash-code/functions/: kernel-version-to-package.sh  load-package-version.sh  misc-tools.sh
src/bash-code/tools/: sd-boot-efi-tool-update  sd-boot-efifs-update  sd-boot-find-boot-mounts  sd-boot-kernel-update  sd-boot-package-version-update
src/c-code/: .valgrindrc  CMakeLists.txt  do-build
src/c-code/Testing/Triggers/: all-kernels  kernel-combo  linux  linux-custom
src/c-code/Testing/plugin-tests/: run-loaderentry-efi
src/c-code/lib/: array_str.c  config.c  copy_file.c  dev_info.c  env.c  get_one_line.c  is_kernel_image.c  kernel_info.c  kernel_info_all.c  kernel_install_oper.c  kernel_install_plugin.c  kernel_install_run.c  kernel_triggers.c  keyval.c  ki_plugin_env.c  loaderentry_efi.c  loaderentry_kernel.c  loaderentry_modify_file.c  make_dir.c  make_symlink.c  managed_packages.c  msg.c  package_version_installed.c  package_versions.c  path_add_slash.c  read_file.c  read_triggers.c  remove_file.c  rm_rf.c  run_cmd.c  run_cmd_output.c  string_in_list.c  trim_string.c
src/c-code/lib/include/: sd-boot.h
src/c-code/plugins/: loaderentry-modify.c
src/c-code/scripts/: check-c-code  run-test-suite
src/c-code/tools/: efi-tool-update.c  efifs-update.c  kernel-update.c  set-alternative.c
src/data/etc/kernel/: install.conf
src/data/etc/sd-boot/: config.yaml  edk2-shell.image  memtest86_64-git.image
src/data/hooks/: 60-sd-boot-kernel-remove.hook  69-sd-boot-efifs-remove.hook  70-sd-boot-efi-tool-remove.hook  90-sd-boot-kernel-install.hook  99-sd-boot-efi-tool-install.hook  99-sd-boot-efifs-install.hook
src/data/man/: Makefile  build-man-pages.sh  sd-boot-efi-tool-update.8.rst  sd-boot-efi-tool-update.rst  sd-boot-efifs-update.8.rst  sd-boot-find-boot-mounts.rst  sd-boot-kernel-update.8.rst  sd-boot-kernel-update.rst
src/data/share/: Changelog.rst  Readme.rst  config.yaml.sample
src/data/share/License/: License.rst
src/etc/sd-boot/: kernel.packages
src/hooks/: 69-sd-boot-efifs-remove.hook  90-sd-boot-kernel-install.hook  99-sd-boot-efi-tool-install.hook
src/include/: sd-boot.h
src/lib/: array_str.c  array_str_add.c  array_str_move.c  boot_mounts.c  boot_mounts_current.c  check_permission.c  config.c  copy_file.c  count_envp_argv.c  current_datetime.c  dev_info.c  dir_dup_links.c  dynamic_string.c  efi_image.c  efi_var.c  file_list_glob.c  find_boot_mounts.c  find_boot_mounts_current.c  find_efi_current.c  get_one_line.c  get_plugin_list.c  get_triggers.c  kernel_info.c  kernel_info_all.c  kernel_install_plugin.c  kernel_install_run.c  kernel_triggers.c  keyval.c  ki_efi_conf_bls.c  ki_efi_env.c  ki_oper.c  ki_plugin.c  ki_plugin_efi_env.c  ki_plugin_env.c  ki_plugin_env_init.c  ki_plugin_test_env.c  ki_run.c  loaderentry_efi.c  loaderentry_kernel.c  loaderentry_modify_file.c  (+25 more)
src/lib-cmd/: meson.build  run_cmd.c  run_cmd_output.c  sd-boot-cmd.h
src/lib-config/: clean_config.c  config.c  config_clean.c  config_files.c  config_init.c  config_test.c  convert_config.c  env_base.c  ki_install_conf.c  ki_oper.c  load_config_toml.c  load_config_yaml.c  load_kernel_install.c  meson.build  save_config_yaml.c  sd-boot-config.h
src/lib-efi/: efi_image.c  efi_tool_add.c  efi_tool_inspect.c  efi_tool_ki_vers.c  efi_tool_pkginfo.c  efi_tool_pkginfos_from_triggers.c  efi_tool_remove.c  efi_tool_update_execute.c  ki_efi_conf_bls.c  ki_efi_env.c  ki_efi_tool_update_one.c  ki_plugin_efi_env.c  loaderentry_efi.c  managed_pkg.c  meson.build  sd-boot-efi.h
src/lib-efifs/: efifs-add-remove.c  meson.build  sd-boot-efifs.h
src/lib-kernel/: get_all_kernel_image_paths.c  init_pkginfo_from_kernel_image.c  init_pkginfos_all.c  is_kernel_image.c  kernel_add_remove.c  kernel_info.c  kernel_info_all.c  kernel_inspect.c  kernel_pkg_name_to_image.c  kernel_pkg_to_info.c  kernel_pkginfo_from_pkg_name.c  kernel_pkginfos_from_triggers.c  kernel_triggers.c  kernel_triggers_parse.c  kernel_update_execute.c  ki_kernel_env.c  ki_kernel_update_one.c  ki_loaderentry_kernel.c  loaderentry_kernel.c  managed_kernel.c  meson.build  parse_kernel_triggers.c  pkginfo_from_kernel_image.c  pkginfos_all.c  pkginfos_from_image_paths.c  sd-boot-kernel.h
src/lib-mounts/: boot_mounts.c  boot_mounts_current.c  find_boot_mounts.c  find_boot_mounts_current.c  meson.build  mount_info.c  mount_is_block_device.c  sd-boot-mounts.h
src/lib-msg/: meson.build  msg.c  sd-boot-msg.h
src/lib-package/: meson.build  package_version_file.c  package_version_installed.c  package_versions.c  package_versions_update.c  sd-boot-package.h
src/lib-tool/: init_oper.c  init_pkginfos.c  init_tool.c  managed_pkgs.c  meson.build  pkginfos_from_pkg_name.c  pkginfos_from_triggers.c  sd-boot-tool.h  update_pkginfos.c.xxx
src/lib-utils/: array_str.c  array_str_add.c  array_str_copy.c  array_str_move.c  array_str_null.c  copy_file.c  dir_dup_links.c  dynamic_string.c  efivars_available.c  file_list_glob.c  get_one_line.c  keyval.c  make_dir.c  make_symlink.c  meson.build  misc.c  path_add_slash.c  read_file.c  read_one_line.c  sd-boot-utils.h  string_in_list.c  unshare_available.c
src/lib/include/: sd-boot.h
src/plugins/: loaderentry-modify.c
src/share/: Changelog.rst  Readme.rst
src/tests/Testing/Triggers/: all-kernels  edk2-shell  efifs  kernel-combo  linux
src/tests/Testing/plugin-tests/: run-loaderentry-efi  run-loaderentry-kernel
src/tests/scripts/: check-c-code  init-test-setup  run-one-test  run-one-wrapper  run-test-suite  static-analysis  test-initialize
src/tools/: efi-tool-update.c  efifs-update.c  find-boot-mounts.c  kernel-update.c  set-alternative.c
src/tools-efi/: efi-tool-update-triggers.c  efi-tool-update.c
src/tools-kernel/: kernel-update-triggers.c  kernel-update.c
src/tools-plugins/: loaderentry-modify.c
(+37 files in other folders)
