#
# sd-boot: lib-msg
#

#
# Source code
#
inc_dir += include_directories('.')

lib_sources += files(
    'config.c',
    'config_clean.c',
    'config_files.c',
    'config_init.c',
    'config_test.c',
    'convert_config.c',
    'env_base.c',
    'ki_install_conf.c',
    'ki_oper.c',
    'load_config_toml.c',
    'load_config_yaml.c',
    'load_kernel_install.c',
    'save_config_yaml.c',
    )
