#
# sd-boot: lib-msg
#

#
# Source code
#
inc_dir += include_directories('.')

lib_sources += files(
    'efi_image.c',
    'efi_tool_add.c',
    'efi_tool_inspect.c',
    'efi_tool_remove.c',
    'ki_efi_conf_bls.c',
    'ki_efi_env.c',
    'ki_plugin_efi_env.c',
    'loaderentry_efi.c',
    'managed_pkg.c',
    )

