#
# sd-boot: lib-msg
#

#
# Source code
#
inc_dir += include_directories('.')

lib_sources += files(
    'efi_image.c',
    #'efi_tool_add.c',
    #'efi_tool_inspect.c',
    'efi_tool_ki_vers.c',
    'efi_tool_pkginfo.c',
    'efi_tool_pkginfos_from_triggers.c',
    #'efi_tool_remove.c',
    'efi_tool_update_execute.c',
    'ki_efi_conf_bls.c',
    'ki_efi_env.c',
    'ki_efi_tool_update_one.c',
    'ki_plugin_efi_env.c',
    'loaderentry_efi.c',
    )

