#
# sd-boot: lib-msg
#

#
# Source code
#
inc_dir += include_directories('.')

lib_sources += files(
    'is_kernel_image.c',
    'kernel_add_remove.c',
    'kernel_info_all.c',
    'kernel_info.c',
    'kernel_inspect.c',
    'kernel_pkg_to_info.c',
    'kernel_triggers.c',
    'loaderentry_kernel.c',
    'managed_kernel.c',
    'parse_kernel_triggers.c',
    )

