#
# sd-boot: lib-msg
#

#
# Source code
#
inc_dir += include_directories('.')

lib_sources += files(
    'init_pkginfo_from_kernel_image.c',
    'init_pkginfos_all.c',
    'get_all_kernel_image_paths.c',
    'is_kernel_image.c',
    'kernel_pkginfo_from_pkg_name.c',
    'kernel_pkginfos_from_triggers.c',
    'kernel_pkg_name_to_image.c',
    'kernel_triggers_parse.c',
    'kernel_update_execute.c',
    'ki_kernel_update_one.c',
    'ki_loaderentry_kernel.c',
    'pkginfo_from_kernel_image.c',
    'pkginfos_all.c',
    'pkginfos_from_image_paths.c',

    )

