#
# sd-boot: lib-msg
#

#
# Source code
#
inc_dir += include_directories('.')

lib_sources += files(
    'array_str.c',
    'array_str_add.c',
    'array_str_move.c',
    'array_str_copy.c',
    'array_str_null.c',
    'copy_file.c',
    'current_datetime.c',
    'dir_dup_links.c',
    'dynamic_string.c',
    'file_list_glob.c',
    'get_one_line.c',
    'keyval.c',
    'make_dir.c',
    'make_symlink.c',
    'misc.c',
    'path_add_slash.c',
    'read_file.c',
    'read_one_line.c',
    'remove_file.c',
    'rm_rf.c',
    'string_in_list.c',
    'trim_string.c',
    'unshare_available.c',
    'efivars_available.c',
    )
