#
# sd-boot: lib-msg
#

#
# Source code
#
inc_dir += include_directories('.')

lib_sources += files(
    'check_permission.c',
    'efi_var.c',
    'plugins_all.c',
    'plugins_active.c',
    'ki_plugin.c',
    'ki_plugin_env_init.c',
    'ki_run.c',
    'loaderentry_modify_file.c',
    'make_kernel_install_conf.c',
    'read_triggers.c',
    'ukify_os_release.c',
    )
