#
# sd-boot: lib-msg
#

#
# Source code
#
inc_dir += include_directories('.')

lib_sources += files(
    'check_permission.c',
    'efi_var.c',
    'get_triggers.c',
    'ki_plugin.c',
    'ki_plugin_env_init.c',
    'ki_run.c',
    'loaderentry_modify_file.c',
    'make_kernel_install_conf.c',
    'pkginfo.c',
    'plugins_active.c',
    'plugins_all.c',
    'read_triggers.c',
    'tool.c',
    'trigger_is_path.c',
    'triggers.c',
    'ukify_os_release.c',
    )

